# pydep-dot-to-uml

./: .pre-commit-config.yaml  README.md  pyproject.toml
pydep_dot_to_uml/: __init__.py  dot.py  file.py  pydep_dot_to_uml.py  util.py
