[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "pydep_dot_to_uml"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
license = {text = "GPL"}
description = "A program which converts the dot output of `pydep` into PlantUML"
urls = {Homepage = "https://github.com/zwimer/pydep-dot-to-uml"}
requires-python = ">= 3.12"
dynamic = ["version"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.scripts]
pydep-dot-to-uml = "pydep_dot_to_uml:cli"

[tool.setuptools]
license-files = ["LICENSE"]
include-package-data = false

[tool.setuptools.packages]
find = {namespaces = false}

[tool.setuptools.package-data]
pydep_dot_to_uml = ["py.typed"]

[tool.setuptools.dynamic]
version = {attr = "pydep_dot_to_uml.__version__"}

# Tools

[tool.black]
line-length = 120
target-version = ["py312"]

[tool.ruff]
ignore=["E731"]
line-length = 120
[tool.ruff.per-file-ignores]
"__init__.py" = ["F401", "F403"]

[tool.vulture]
ignore_names = ["cli"]
paths = ["pydep_dot_to_uml"]
